--- a/source/changelog.txt
+++ b/source/changelog.txt
@@ -1,3 +1,6 @@
 -------CHANGELOG-------
-1. Enjoy Legacy Speed <3
+1. Fix Hypixel Leveled + UHC Stars Capture
+2. Improve Mail Access
+3. Fix Some Bug
+4. Add remove duplication lines when load combolist!
 -------CHANGELOG-------
