--- a/source/changelog.txt
+++ b/source/changelog.txt
@@ -1,10 +1,3 @@
 -------CHANGELOG-------
-1. Fixed Cpu Leak & Memory Leak
-2. Added Discord RPC & Discord Webhook Support
-3. Improved Multithread
-4. Fixed some gay bug
-5. Removed Labymod because they update api
-6. Improved hits stealer!
-7. Added combos & proxies stealer
-8. Fix Mineplex Capture!
+1. Changed github username
 -------CHANGELOG-------
